Added some changes, boasted some more...or not

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 		<div class="row">
 			<div class="span12 spacing">
 				<strong>
-					CostPartner Digital ApS <i>(Silkeborg, Denmark)</i> - <span>Senior Front End Web Developer <i>(2012 - 2014)</i></span>
+					CostPartner Digital ApS <i>(Silkeborg, Denmark)</i> - <span>Front End Web Developer <i>(2012 - 2014)</i></span>
 					<a href="http://costpartner.com/" target="_blank" title="Link to the company's website">
 						<img src="images/icon-link.png" alt="Link to the company's website"/>
 					</a>
@@ -141,12 +141,12 @@
 		<div class="row">
 				<div class="span6">
 					<strong>
-						Pottery Company "Akord 009" - <span>Designer / Developer</span>
-						<a href="http://fr1stys.deviantart.com/art/Pottery-Site-Design-128889982" target="_blank" title="Link to the project">
+						MithrilJS Boilerplate - <span>Developer / Creator</span>
+						<a href="https://github.com/fristys/mithriljs-boilerplate" target="_blank" title="Link to the project">
 							<img src="images/icon-link.png" alt="Link to the project"/>
 						</a>
 					</strong>
-					UX redesign and UX recoding.
+					Complete creation of the boilerplate structure, maintainence code and an accompanying <a href="http://yeoman.io/" target="_blank" rel="nofollow">Yeoman</a> generator for user ease of use. Intended to be easily scalable and used on all sized projects.
 				</div>
 
 				<div class="span6">
@@ -242,7 +242,7 @@
 						<div class="row">
 							<div class="span12">
 								<small><i>* jQuery, Underscore, Angular (<= 1.3.x), Ember, Knockout, Mithril</i></small> <br>
-								<small><i>** Express.js, Gulp, Grunt</i></small> <br>
+								<small><i>** Express.js, Gulp, Grunt, Yeoman</i></small> <br>
 								<small><i>*** Wordpress management / theming / plugin creation, Joomla</i></small>
 							</div>
 						</div>
