--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 		<div class="row">
 			<div class="span12 spacing">
 				<strong>
-					CostPartner Digital ApS <i>(Silkeborg, Denmark)</i> - <span>Front End Web Developer <i>(2012 - 2014)</i></span>
+					CostPartner Digital ApS <i>(Silkeborg, Denmark)</i> - <span>Front End Web Developer <i>(May 2013 - Dec. 2014)</i></span>
 					<a href="http://costpartner.com/" target="_blank" title="Link to the company's website">
 						<img src="images/icon-link.png" alt="Link to the company's website"/>
 					</a>
