Added my latest acquired skills

--- a/index.html
+++ b/index.html
@@ -235,14 +235,14 @@
 						<div class="row">
 							<div class="span12">
 								<strong>Excellent:</strong>
-								HTML, CSS, JavaScript <small>(* incl. a variety of frameworks)</small>, NodeJS <small>(** incl. a few modules)</small>, Java, PHP <small>(*** incl. PHP OOP and a few CMS solutions)</small>, Markdown, Jade, Git <small>(incl. GitHub)</small>, Adobe Photoshop
+								HTML, CSS, LESS, JavaScript <small>(* incl. a variety of frameworks)</small>, NodeJS <small>(** incl. a few modules)</small>, Java, PHP <small>(*** incl. PHP OOP and a few CMS solutions)</small>, Markdown, Jade, Git <small>(incl. GitHub)</small>, Adobe Photoshop
 							</div>
 						</div>
 
 						<div class="row">
 							<div class="span12">
-								<small><i>* jQuery, Underscore, Angular (<= 1.3.x), Ember, Knockout, Mithril</i></small> <br>
-								<small><i>** Express.js, Gulp, Grunt, Yeoman</i></small> <br>
+								<small><i>* jQuery, Underscore, Angular (<= 1.3.x), Ember, Knockout, Mithril, more.</i></small> <br>
+								<small><i>** Express.js, Gulp, Grunt, Yeoman, more.</i></small> <br>
 								<small><i>*** Wordpress management / theming / plugin creation, Joomla</i></small>
 							</div>
 						</div>
@@ -252,14 +252,14 @@
 				<div class="row">
 					<div class="span12">
 						<strong>Good:</strong>
-						mySQL, Ruby <small>(incl. Ruby on Rails)</small>, C, C#, ASP.NET MVC
+						mySQL, MongoDB, Ruby <small>(incl. Ruby on Rails)</small>, C, C#, ASP.NET MVC
 					</div>
 				</div>
 
 				<div class="row">
 					<div class="span12">
 						<strong>Average:</strong>
-						MongoDB, Microsoft SQL, Oracle SQL, ASP.NET Web API
+						Microsoft SQL, Oracle SQL, ASP.NET Web API
 					</div>
 				</div>
 
