--- a/index.html
+++ b/index.html
@@ -122,6 +122,19 @@
 		<div class="row">
 			<div class="span12 spacing">
 				<strong>
+					simplySO <i>(Århus, Denmark)</i> - <span>Front End Web Developer <i>(February 2015 - Present)</i></span>
+					<a href="http://simplyso.dk/" target="_blank" title="Link to the company's website">
+						<img src="images/icon-link.png" alt="Link to the company's website"/>
+					</a>
+				</strong>
+				Working on the company's core Web Application - SimplySO, a standardized web-based UI for Microsoft SharePoint, ready to run. On premise, as SaaS or for Office 365.
+				Writing Front end code in HTML, CS and Javascript - primarily the AngularJS framework.
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="span12">
+				<strong>
 					CostPartner Digital ApS <i>(Silkeborg, Denmark)</i> - <span>Front End Web Developer <i>(May 2013 - Dec. 2014)</i></span>
 					<a href="http://costpartner.com/" target="_blank" title="Link to the company's website">
 						<img src="images/icon-link.png" alt="Link to the company's website"/>
