--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 						<div class="row">
 							<div class="span12">
 								<strong>Excellent:</strong>
-								HTML, CSS, LESS, JavaScript <small>(* incl. a variety of frameworks)</small>, NodeJS <small>(** incl. a few modules)</small>, Java, PHP <small>(*** incl. PHP OOP and a few CMS solutions)</small>, Markdown, Jade, Git <small>(incl. GitHub)</small>, Adobe Photoshop
+								HTML, CSS, LESS, JavaScript <small>(* incl. a variety of frameworks)</small>, CoffeeScript, NodeJS <small>(** incl. a few modules)</small>, Java, PHP <small>(*** incl. PHP OOP and a few CMS solutions)</small>, Markdown, Jade, Git <small>(incl. GitHub)</small>, Adobe Photoshop
 							</div>
 						</div>
 
