--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 				<div class="row">
 					<!-- TODO: Smiling photo with a shirt -->
-					<img class="span5 photo" src="images/profile.png" alt="Momchil Georgiev" />
+					<img class="span5 photo" src="http://fristys.me/avt.jpg" alt="Momchil Georgiev" />
 
 					<ul class="span7">
 						<li>
@@ -248,7 +248,7 @@
 						<div class="row">
 							<div class="span12">
 								<strong>Excellent:</strong>
-								HTML, CSS, LESS, JavaScript <small>(* incl. a variety of frameworks)</small>, CoffeeScript, NodeJS <small>(** incl. a few modules)</small>, Java, PHP <small>(*** incl. PHP OOP and a few CMS solutions)</small>, Markdown, Jade, Git <small>(incl. GitHub)</small>, Adobe Photoshop
+								HTML, CSS, LESS, JavaScript <small>(* incl. a variety of frameworks)</small>, CoffeeScript, ES6 (Babel), NodeJS <small>(** incl. a few modules)</small>, Java, PHP <small>(*** incl. PHP OOP and a few CMS solutions)</small>, Markdown, Jade, Git <small>(incl. GitHub)</small>, Adobe Photoshop
 							</div>
 						</div>
 
