Guess who's graduating

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 							Linguistic and ICT studies at Secondary School "St. Kliment Ohridski", Troyan, Bulgaria
 						</li>
 						<li>
-							<strong> 2012 - 2016 (expected)</strong>
+							<strong> 2012 - 2016</strong>
 							ICT Engineering at VIA University College Campus Horsens, Denmark <i>(Currently in the 6th semester)</i>
 						</li>
 					</ul>
