--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 						</li>
 						<li>
 							<strong> 2012 - 2016</strong>
-							ICT Engineering at VIA University College Campus Horsens, Denmark <i>(Currently in the 6th semester)</i>
+							ICT Engineering at VIA University College Campus Horsens, Denmark
 						</li>
 					</ul>
 				</div>
