--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<div class="span6">
 					<ul>
 						<li><a href="mailto:fristys@gmail.com" rel="nofollow">fristys@gmail.com</a></li>
-						<li><a href="http://about.me/fristys" target="_blank">about.me/fristys</a></li>
+						<li><a href="http://fristys.me" target="_blank">fristys.me</a></li>
 						<li><strong>+45 42 52 72 41</strong></li>
 						<li>
 							<span class="show-print"><a href="http://linkedin.com/in/momchilgeorgievgeorgiev">momchilgeorgievgeorgiev</a></span>
