--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 						</li>
 						<li>
 							<strong> 2012 - 2016</strong>
-							ICT Engineering at VIA University College Campus Horsens, Denmark
+							Bachelor of ICT Engineering at VIA University College Campus Horsens, Denmark
 						</li>
 					</ul>
 				</div>
@@ -248,14 +248,14 @@
 						<div class="row">
 							<div class="span12">
 								<strong>Excellent:</strong>
-								HTML, CSS, LESS, JavaScript <small>(* incl. a variety of frameworks)</small>, CoffeeScript, ES6 (Babel), NodeJS <small>(** incl. a few modules)</small>, Java, PHP <small>(*** incl. PHP OOP and a few CMS solutions)</small>, Markdown, Jade, Git <small>(incl. GitHub)</small>, Adobe Photoshop
+								HTML, CSS, LESS, JavaScript <small>(* incl. a variety of frameworks)</small>, TypeScript, CoffeeScript, ES6 (Babel), NodeJS <small>(** incl. a few modules)</small>, Java, PHP <small>(*** incl. PHP OOP and a few CMS solutions)</small>, Markdown, Jade, Git <small>(incl. GitHub)</small>, Adobe Photoshop
 							</div>
 						</div>
 
 						<div class="row">
 							<div class="span12">
-								<small><i>* jQuery, Underscore, Angular (<= 1.3.x), Ember, Knockout, Mithril, more.</i></small> <br>
-								<small><i>** Express.js, Gulp, Grunt, Yeoman, more.</i></small> <br>
+								<small><i>* jQuery, Underscore, Angular (both 1.x and >2.x), Ember, Knockout, Mithril, more.</i></small> <br>
+								<small><i>** Express.js, Gulp, Grunt, Yeoman, Webpack, Electron, more.</i></small> <br>
 								<small><i>*** Wordpress management / theming / plugin creation, Joomla</i></small>
 							</div>
 						</div>
@@ -265,7 +265,7 @@
 				<div class="row">
 					<div class="span12">
 						<strong>Good:</strong>
-						mySQL, MongoDB, Ruby <small>(incl. Ruby on Rails)</small>, C, C#, ASP.NET MVC
+						mySQL, MongoDB, Ruby <small>(incl. Ruby on Rails)</small>, C, C#, ASP.NET MVC, Android
 					</div>
 				</div>
 
