--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 					</a>
 				</strong>
 
-				Working on the company's core Web Application - CostPartner ClearView, a freight and tender management application. Writing Front End code in HTML, CSS and JavaScript - mostly using the jQuery and AngularJS libraries. Also writing some Back End code in ASP.NET MVC / ASP.NET Web API. Responsible for the look and feel of the Front end of the application, alongside the code behind it.
+				Working on the company's core Web Application - CostPartner ClearView, a freight and tender management application. Writing Front End code in HTML, CSS and JavaScript - mostly using the jQuery and AngularJS libraries. Responsible for the look and feel of the Front end of the application, alongside the code behind it.
 			</div>
 		</div>
 
