--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 						<div class="row">
 							<div class="span12">
 								<strong>Excellent:</strong>
-								HTML, CSS, LESS, JavaScript <small>(* incl. a variety of frameworks)</small>, TypeScript, CoffeeScript, ES6 (Babel), NodeJS <small>(** incl. a few modules)</small>, Java, PHP <small>(*** incl. PHP OOP and a few CMS solutions)</small>, Markdown, Jade, Git <small>(incl. GitHub)</small>, Adobe Photoshop
+								HTML, CSS, LESS, JavaScript <small>(* incl. a variety of frameworks)</small>, TypeScript, CoffeeScript, ES6 (Babel), NodeJS <small>(** incl. a few modules)</small>, Java, PHP, Markdown, Jade, Git <small>(incl. GitHub)</small>, Adobe Photoshop
 							</div>
 						</div>
 
@@ -256,7 +256,6 @@
 							<div class="span12">
 								<small><i>* jQuery, Underscore, Angular (both 1.x and >2.x), Ember, Knockout, Mithril, more.</i></small> <br>
 								<small><i>** Express.js, Gulp, Grunt, Yeoman, Webpack, Electron, more.</i></small> <br>
-								<small><i>*** Wordpress management / theming / plugin creation, Joomla</i></small>
 							</div>
 						</div>
 					</div>
