--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 							<img src="images/icon-link.png" alt="Link to the project"/>
 						</a>
 					</strong>
-					Complete creation of the boilerplate structure, maintainence code and an accompanying <a href="http://yeoman.io/" target="_blank" rel="nofollow">Yeoman</a> generator for user ease of use. Intended to be easily scalable and used on all sized projects.
+					Complete creation of the boilerplate structure, maintainence code. Intended to be easily scalable and used on all sized projects.
 				</div>
 
 				<div class="span6">
