--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 							<img src="images/icon-link.png" alt="Link to the project"/>
 						</a>
 					</strong>
-					Complete creation of the boilerplate structure, maintainence code. Intended to be easily scalable and used on all sized projects.
+					Complete creation of the boilerplate structure, maintainence code.
 				</div>
 
 				<div class="span6">
