--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					<ul class="span7">
 						<li>
 							<strong>Address:</strong>
-							Rædersgade 6, 2. tv. Horsens, DK
+							Lendropsgade 3, 2. sal Horsens, DK
 						</li>
 						<li>
 							<strong>Date of birth:</strong>
