--- a/teamsconfig.html
+++ b/teamsconfig.html
@@ -6,25 +6,22 @@
 	<title>SimplySoDev</title>
 </head>
 <body>
-    <div id="status">Loading...</div>
-
 	<script src="https://statics.teams.microsoft.com/sdk/v0.4/js/MicrosoftTeams.js"></script>
     <script>
         try {
             microsoftTeams.initialize();
         } catch (e) {
-            document.getElementById('status').innerHTML = 'Failed to initialize Microsoft Teams SDK';
+
         } finally {
             microsoftTeams.settings.setValidityState(true);
 
             microsoftTeams.settings.registerOnSaveHandler(function (saveEvent) {
                 microsoftTeams.settings.setSettings({
-                    contentUrl: location.origin + '/index.html',
+                    contentUrl: 'https://simplysodev.com',
                     suggestedDisplayName: 'SimplySo Development',
-                    websiteUrl: location.origin + '/index.html'
+                    websiteUrl: 'https://simplysodev.com'
                 });
 
-                document.getElementById('status').innerHTML = 'Saved tab data';
                 saveEvent.notifySuccess();
             });
         }
