--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/style.css" media="all">
 <!--[if lt IE 9]>
   <script src="js/css3-mediaqueries.js"></script>
-  <script src="http://cdn.jsdelivr.net/css3pie/2.0b1/PIE.htc"></script>
+  <script src="https://cdn.jsdelivr.net/css3pie/2.0b1/PIE.htc"></script>
 <![endif]-->
 <!--[if (gte IE 6)&(lte IE 8)]>
   <script type="text/javascript" src="js/selectivizr-min.js"></script>
@@ -18,7 +18,7 @@
 </head>
 <body>
 <!--[if lt IE 7]>
-  <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
+  <p class="chromeframe">You are using an outdated browser. <a href="https://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
 <![endif]-->
 
 <!--
@@ -36,12 +36,12 @@
 				<div class="span6">
 					<ul>
 						<li><a href="mailto:fristys@gmail.com" rel="nofollow">fristys@gmail.com</a></li>
-						<li><a href="http://fristys.me" target="_blank">fristys.me</a></li>
+						<li><a href="https://fristys.me" target="_blank">fristys.me</a></li>
 						<li><strong>+45 42 52 72 41</strong></li>
 						<li>
-							<span class="show-print"><a href="http://linkedin.com/in/momchilgeorgievgeorgiev">momchilgeorgievgeorgiev</a></span>
+							<span class="show-print"><a href="https://linkedin.com/in/momchilgeorgievgeorgiev">momchilgeorgievgeorgiev</a></span>
 
-							<a class="linkedIn" href="http://linkedin.com/in/momchilgeorgievgeorgiev/" target="_blank" title="Me at LinkedIN"><img src="images/icon-linkedin.png" alt="Me at LinkedIN"/></a>
+							<a class="linkedIn" href="https://linkedin.com/in/momchilgeorgievgeorgiev/" target="_blank" title="Me at LinkedIN"><img src="images/icon-linkedin.png" alt="Me at LinkedIN"/></a>
 
 							<a class="print" title="Print my CV"><img src="images/icon-print.png" alt="Print my CV"/></a>
 						</li>
@@ -63,7 +63,7 @@
 
 				<div class="row">
 					<!-- TODO: Smiling photo with a shirt -->
-					<img class="span5 photo" src="http://fristys.me/avt.jpg" alt="Momchil Georgiev" />
+					<img class="span5 photo" src="https://fristys.me/avt.jpg" alt="Momchil Georgiev" />
 
 					<ul class="span7">
 						<li>
@@ -123,7 +123,7 @@
 			<div class="span12 spacing">
 				<strong>
 					simplySO <i>(Århus, Denmark)</i> - <span>Front End Web Developer <i>(February 2015 - Present)</i></span>
-					<a href="http://simplyso.dk/" target="_blank" title="Link to the company's website">
+					<a href="https://simplyso.com/" target="_blank" title="Link to the company's website">
 						<img src="images/icon-link.png" alt="Link to the company's website"/>
 					</a>
 				</strong>
@@ -165,7 +165,7 @@
 				<div class="span6">
 					<strong>
 						Sci-fi Informer - <span>Lead Designer</span>
-						<a href="http://fr1stys.deviantart.com/art/Sci-fi-Informer-Design-277297424" target="_blank" title="Link to the project">
+						<a href="https://fr1stys.deviantart.com/art/Sci-fi-Informer-Design-277297424" target="_blank" title="Link to the project">
 							<img src="images/icon-link.png" alt="Link to the project"/>
 						</a>
 					</strong>
@@ -183,7 +183,7 @@
 				<div class="span6">
 					<strong>
 						Flower Shop "Orchild" - <span>Lead Designer / Developer</span>
-						<a href="http://www.orhideia-bg.com/index.html" target="_blank" title="Link to the project">
+						<a href="https://www.orhideia-bg.com/index.html" target="_blank" title="Link to the project">
 							<img src="images/icon-link.png" alt="Link to the project"/>
 						</a>
 					</strong>
@@ -200,7 +200,7 @@
 				<div class="span6">
 					<strong>
 						Counter-Strike BG - <span>Designer</span>
-						<a href="http://cs-bg.info/banners.php" target="_blank" title="Link to the project">
+						<a href="https://cs-bg.info/banners.php" target="_blank" title="Link to the project">
 							<img src="images/icon-link.png" alt="Link to the project"/>
 						</a>
 					</strong>
@@ -212,7 +212,7 @@
 			<div class="span6">
 				<strong>
 					Nightwing CSS Grid System - <span>Creator</span>
-					<a href="http://fristys.github.io/nightwing/" target="_blank" title="Link to the project">
+					<a href="https://fristys.github.io/nightwing/" target="_blank" title="Link to the project">
 						<img src="images/icon-link.png" alt="Link to the project"/>
 					</a>
 				</strong>
@@ -222,7 +222,7 @@
 			<div class="span6">
 				<strong>
 					Uncredited work
-					<a href="http://fr1stys.deviantart.com/gallery/" target="_blank" title="Link to the project">
+					<a href="https://fr1stys.deviantart.com/gallery/" target="_blank" title="Link to the project">
 						<img src="images/icon-link.png" alt="Link to the project"/>
 					</a>
 				</strong>
