Update profile photo. Enough hooded heroes

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 				<div class="row">
 					<!-- TODO: Smiling photo with a shirt -->
-					<img class="span5 photo" src="https://fristys.me/avt.jpg" alt="Momchil Georgiev" />
+					<img class="span5 photo" src="/images/profile_new.jpg" alt="Momchil Georgiev" />
 
 					<ul class="span7">
 						<li>
