--- a/index.html
+++ b/index.html
@@ -122,7 +122,20 @@
 		<div class="row">
 			<div class="span12 spacing">
 				<strong>
-					simplySO <i>(Århus, Denmark)</i> - <span>Front End Web Developer <i>(February 2015 - Present)</i></span>
+					SimplySo&reg; <i>(Århus, Denmark)</i> - <span>Lead Developer <i>(February 2018 - Present)</i></span>
+					<a href="https://simplyso.com/" target="_blank" title="Link to the company's website">
+						<img src="images/icon-link.png" alt="Link to the company's website"/>
+					</a>
+				</strong>
+				Managing and working on the company's core Web Application - SimplySO, a standardized web-based UI for Microsoft SharePoint, ready to run. On premise, as SaaS or for Office 365.
+				Writing Front end code in HTML, CS and Javascript - primarily the AngularJS framework.
+			</div>
+		</div>
+		
+		<div class="row">
+			<div class="span12 spacing">
+				<strong>
+					SimplySo&reg; <i>(Århus, Denmark)</i> - <span>Front End Web Developer <i>(February 2015 - January 2018)</i></span>
 					<a href="https://simplyso.com/" target="_blank" title="Link to the company's website">
 						<img src="images/icon-link.png" alt="Link to the company's website"/>
 					</a>
@@ -188,23 +201,6 @@
 						</a>
 					</strong>
 					General UX design (re-coded by someone else), combined with lots of graphic work such as banners, branding and other.
-				</div>
-		</div>
-
-		<div class="row  small-spacing print-spacing">
-				<div class="span6">
-					<strong>Tutorials BG - <span>Designer</span></strong>
-					General UX design, combined with lots of graphic work such as banners, branding and other.
-				</div>
-
-				<div class="span6">
-					<strong>
-						Counter-Strike BG - <span>Designer</span>
-						<a href="https://cs-bg.info/banners.php" target="_blank" title="Link to the project">
-							<img src="images/icon-link.png" alt="Link to the project"/>
-						</a>
-					</strong>
-					Graphic work on banners and branding.
 				</div>
 		</div>
 
