--- a/index.html
+++ b/index.html
@@ -1,338 +1,1 @@
-<!doctype html>
-<html class="no-js" lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Momchil Georgiev - Online CV</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
- 	<meta name="HandheldFriendly" content="true">
-  <link rel="stylesheet" href="css/nightwing-full-gutter.min.css" media="all">
-  <link rel="stylesheet" href="css/style.css" media="all">
-<!--[if lt IE 9]>
-  <script src="js/css3-mediaqueries.js"></script>
-  <script src="https://cdn.jsdelivr.net/css3pie/2.0b1/PIE.htc"></script>
-<![endif]-->
-<!--[if (gte IE 6)&(lte IE 8)]>
-  <script type="text/javascript" src="js/selectivizr-min.js"></script>
-<![endif]-->
-</head>
-<body>
-<!--[if lt IE 7]>
-  <p class="chromeframe">You are using an outdated browser. <a href="https://browsehappy.com/">Upgrade your browser today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better experience this site.</p>
-<![endif]-->
-
-<!--
-	Good to see you lurking in my weirdly written code, stranger.
-	If you plan on hiring me, I'm the man for the job. I'm the ultimate coffee to code converting machine.
--->
-	<header role="banner">
-		<div class="container-custom">
-			<div class="row">
-				<div class="span6">
-					<h1>Momchil<span>Georgiev</span></h1>
-					<h2>Front End Developer</h2>
-				</div>
-
-				<div class="span6">
-					<ul>
-						<li><a href="mailto:fristys@gmail.com" rel="nofollow">fristys@gmail.com</a></li>
-						<li><a href="https://fristys.me" target="_blank">fristys.me</a></li>
-						<li><strong>+45 42 52 72 41</strong></li>
-						<li>
-							<span class="show-print"><a href="https://linkedin.com/in/momchilgeorgievgeorgiev">momchilgeorgievgeorgiev</a></span>
-
-							<a class="linkedIn" href="https://linkedin.com/in/momchilgeorgievgeorgiev/" target="_blank" title="Me at LinkedIN"><img src="images/icon-linkedin.png" alt="Me at LinkedIN"/></a>
-
-							<a class="print" title="Print my CV"><img src="images/icon-print.png" alt="Print my CV"/></a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</header>
-<!-- Main content -->
-	<div class="container-custom main" role="main">
-		<div class="row">
-			<!-- About me -->
-			<div class="span7">
-				<div class="row">
-					<div class="span12">
-						<h3>Personal information</h3>
-					</div>
-				</div>
-
-				<div class="row">
-					<!-- TODO: Smiling photo with a shirt -->
-					<img class="span5 photo" src="/images/profile_new.jpg" alt="Momchil Georgiev" />
-
-					<ul class="span7">
-						<li>
-							<strong>Address:</strong>
-							Lendropsgade 3, 2. sal Horsens, DK
-						</li>
-						<li>
-							<strong>Date of birth:</strong>
-							November 15th 1993
-						</li>
-						<li>
-							<strong>Nationality:</strong>
-							Bulgarian
-						</li>
-						<li>
-							<strong>Spoken Languages:</strong>
-							Bulgarian, English, Russian, Danish (Basic level)
-						</li>
-					</ul>
-				</div>
-			</div>
-			<!-- Education -->
-			<div class="span5">
-				<div class="row">
-					<div class="span12">
-						<h3>Education</h3>
-					</div>
-				</div>
-
-				<div class="row">
-					<ul class="span12">
-						<li>
-							<strong>2000 - 2012</strong>
-							Linguistic and ICT studies at Secondary School "St. Kliment Ohridski", Troyan, Bulgaria
-						</li>
-						<li>
-							<strong> 2012 - 2016</strong>
-							Bachelor of ICT Engineering at VIA University College Campus Horsens, Denmark
-						</li>
-					</ul>
-				</div>
-			</div>
-		</div>
-
-		<div class="row">
-			<hr class="span12" />
-		</div>
-
-		<!-- Projects -->
-		<div class="row">
-			<div class="span12">
-				<h3>Professional Work</h3>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="span12 spacing">
-				<strong>
-					SimplySo&reg; <i>(Århus, Denmark)</i> - <span>Lead Developer <i>(February 2018 - Present)</i></span>
-					<a href="https://simplyso.com/" target="_blank" title="Link to the company's website">
-						<img src="images/icon-link.png" alt="Link to the company's website"/>
-					</a>
-				</strong>
-				Managing and working on the company's core Web Application - SimplySO, a standardized web-based UI for Microsoft SharePoint, ready to run. On premise, as SaaS or for Office 365.
-				Writing Front end code in HTML, CS and Javascript - primarily the AngularJS framework.
-			</div>
-		</div>
-		
-		<div class="row">
-			<div class="span12 spacing">
-				<strong>
-					SimplySo&reg; <i>(Århus, Denmark)</i> - <span>Front End Web Developer <i>(February 2015 - January 2018)</i></span>
-					<a href="https://simplyso.com/" target="_blank" title="Link to the company's website">
-						<img src="images/icon-link.png" alt="Link to the company's website"/>
-					</a>
-				</strong>
-				Working on the company's core Web Application - SimplySO, a standardized web-based UI for Microsoft SharePoint, ready to run. On premise, as SaaS or for Office 365.
-				Writing Front end code in HTML, CS and Javascript - primarily the AngularJS framework.
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="span12">
-				<strong>
-					CostPartner Digital ApS <i>(Silkeborg, Denmark)</i> - <span>Front End Web Developer <i>(May 2013 - Dec. 2014)</i></span>
-					<a href="http://costpartner.com/" target="_blank" title="Link to the company's website">
-						<img src="images/icon-link.png" alt="Link to the company's website"/>
-					</a>
-				</strong>
-
-				Working on the company's core Web Application - CostPartner ClearView, a freight and tender management application. Writing Front End code in HTML, CSS and JavaScript - mostly using the jQuery and AngularJS libraries. Responsible for the look and feel of the Front end of the application, alongside the code behind it.
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="span12">
-				<h3>Freelance Work</h3>
-			</div>
-		</div>
-
-		<div class="row">
-				<div class="span6">
-					<strong>
-						MithrilJS Boilerplate - <span>Developer / Creator</span>
-						<a href="https://github.com/fristys/mithriljs-boilerplate" target="_blank" title="Link to the project">
-							<img src="images/icon-link.png" alt="Link to the project"/>
-						</a>
-					</strong>
-					Complete creation of the boilerplate structure, maintainence code.
-				</div>
-
-				<div class="span6">
-					<strong>
-						Sci-fi Informer - <span>Lead Designer</span>
-						<a href="https://fr1stys.deviantart.com/art/Sci-fi-Informer-Design-277297424" target="_blank" title="Link to the project">
-							<img src="images/icon-link.png" alt="Link to the project"/>
-						</a>
-					</strong>
-					General UX design and UX coding, combined with lots of graphic work such as banners, branding and other.
-				</div>
-		</div>
-
-		<div class="row small-spacing">
-				<div class="span6">
-					<strong>St. Petka Church - <span>Lead Designer / Developer</span></strong>
-					General UX design, UX coding, accompanied by a custom-tailored PHP system. This project got me to the 4th place overall in the
-					<a href="http://noit.devbg.org/" target="_blank">Bulgarian National Olympiad of IT</a>.
-				</div>
-
-				<div class="span6">
-					<strong>
-						Flower Shop "Orchild" - <span>Lead Designer / Developer</span>
-						<a href="https://www.orhideia-bg.com/index.html" target="_blank" title="Link to the project">
-							<img src="images/icon-link.png" alt="Link to the project"/>
-						</a>
-					</strong>
-					General UX design (re-coded by someone else), combined with lots of graphic work such as banners, branding and other.
-				</div>
-		</div>
-
-		<div class="row spacing">
-			<div class="span6">
-				<strong>
-					Nightwing CSS Grid System - <span>Creator</span>
-					<a href="https://fristys.github.io/nightwing/" target="_blank" title="Link to the project">
-						<img src="images/icon-link.png" alt="Link to the project"/>
-					</a>
-				</strong>
-				Complete design and coding of the entire grid system. Created to be a lightweight, flexible and versitile grid system replacement.
-			</div>
-
-			<div class="span6">
-				<strong>
-					Uncredited work
-					<a href="https://fr1stys.deviantart.com/gallery/" target="_blank" title="Link to the project">
-						<img src="images/icon-link.png" alt="Link to the project"/>
-					</a>
-				</strong>
-				A lot of work in the PSDtoHTML department for various customers. A lot of work in branding, banners, logos and concept web design.
-			</div>
-		</div>
-
-		<div class="row">
-			<hr class="span12" />
-		</div>
-
-		<div class="row">
-			<!-- Experience -->
-			<div class="span7">
-				<div class="row">
-					<div class="span12">
-						<h3>Experience and Skills</h3>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="span12">
-						<div class="row">
-							<div class="span12">
-								<strong>Excellent:</strong>
-								HTML, CSS, LESS, JavaScript <small>(* incl. a variety of frameworks)</small>, TypeScript, CoffeeScript, ES6 (Babel), NodeJS <small>(** incl. a few modules)</small>, Java, PHP, Markdown, Jade, Git <small>(incl. GitHub)</small>, Adobe Photoshop
-							</div>
-						</div>
-
-						<div class="row">
-							<div class="span12">
-								<small><i>* jQuery, Underscore, Angular (both 1.x and >2.x), Ember, Knockout, Mithril, more.</i></small> <br>
-								<small><i>** Express.js, Gulp, Grunt, Yeoman, Webpack, Electron, more.</i></small> <br>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="span12">
-						<strong>Good:</strong>
-						mySQL, MongoDB, Ruby <small>(incl. Ruby on Rails)</small>, C, C#, ASP.NET MVC, Android
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="span12">
-						<strong>Average:</strong>
-						Microsoft SQL, Oracle SQL, ASP.NET Web API
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="span12">
-						<strong>Vague:</strong>
-						AVR Assembly, SQL Lite, Pascal, Visual Basic, Python
-					</div>
-				</div>
-			</div>
-
-			<!-- Interests -->
-			<div class="span5">
-				<div class="row">
-					<div class="span12">
-						<h3>Notible Achievements</h3>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="span12">
-						4th place on the National Olympiad in IT 2010
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="span12">
-						Multiple 1st places on various IT and linguistic Olympiads in the municipality of Troyan, Bulgaria
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="span12">
-						Cambridge Certificate in Advanced English (CAE) with a <a href="http://cambridge-english-advanced.cambridgeesol.org/exam-overview/exam-results/cae-ielts-exam-result-converter.html" target="_blank">Grade A</a>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="span12">
-						<h3>Interests</h3>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="span12">
-						Prototyping, Photography, Mountain Biking, Basketball, Science Fiction, Fiction, Fantasy, Reading, Movies, Hardware Enthusiast
-					</div>
-				</div>
-			</div>
-		</div>
-
-	<!-- Main container -->
-	</div>
-
-	<script src="js/modernizr.min.js"></script>
-	<script src="js/code.js"></script>
-	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-	
-	  ga('create', 'UA-71926331-2', 'auto');
-	  ga('send', 'pageview');
-	
-	</script>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="The online CV of one Momchil Fristys Georgiev"/><meta name="HandheldFriendly" content="true"><title>Momchil Georgiev - Online CV</title><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"><script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script><link href="/static/css/main.af26bc33.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(c){function e(e){for(var r,t,n=e[0],o=e[1],u=e[2],l=0,i=[];l<n.length;l++)t=n[l],Object.prototype.hasOwnProperty.call(a,t)&&a[t]&&i.push(a[t][0]),a[t]=0;for(r in o)Object.prototype.hasOwnProperty.call(o,r)&&(c[r]=o[r]);for(s&&s(e);i.length;)i.shift()();return p.push.apply(p,u||[]),f()}function f(){for(var e,r=0;r<p.length;r++){for(var t=p[r],n=!0,o=1;o<t.length;o++){var u=t[o];0!==a[u]&&(n=!1)}n&&(p.splice(r--,1),e=l(l.s=t[0]))}return e}var t={},a={1:0},p=[];function l(e){if(t[e])return t[e].exports;var r=t[e]={i:e,l:!1,exports:{}};return c[e].call(r.exports,r,r.exports,l),r.l=!0,r.exports}l.m=c,l.c=t,l.d=function(e,r,t){l.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,get:t})},l.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},l.t=function(r,e){if(1&e&&(r=l(r)),8&e)return r;if(4&e&&"object"==typeof r&&r&&r.__esModule)return r;var t=Object.create(null);if(l.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:r}),2&e&&"string"!=typeof r)for(var n in r)l.d(t,n,function(e){return r[e]}.bind(null,n));return t},l.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return l.d(r,"a",r),r},l.o=function(e,r){return Object.prototype.hasOwnProperty.call(e,r)},l.p="/";var r=window["webpackJsonpmomchil-cv"]=window["webpackJsonpmomchil-cv"]||[],n=r.push.bind(r);r.push=e,r=r.slice();for(var o=0;o<r.length;o++)e(r[o]);var s=n;f()}([])</script><script src="/static/js/2.ebf9d099.chunk.js"></script><script src="/static/js/main.d28dd75f.chunk.js"></script></body></html>
