--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="The online CV of one Momchil Fristys Georgiev" />
-    <meta name="HandheldFriendly" content="true">
-    <title>Momchil Georgiev - Online CV</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
-  </head>
-  <body>
-    <!--
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="The online CV of Momchil Georgiev" />
+  <meta name="author" content="Momchil Georgiev">
+	<meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Momchil Georgiev - Online CV">
+  <meta property="og:locale" content="en-GB">
+  <meta name="twitter:site" content="@fristys">
+  <meta name="twitter:creator" content="@fristys">
+  <meta name="HandheldFriendly" content="true">
+  <title>Momchil Georgiev - Online CV</title>
+  <link rel="icon" href="<%= BASE_URL %>icons/favicon.ico">
+</head>
+
+<body>
+  <!--
       Good to see you lurking in my weirdly written code, stranger.
-      If you plan on hiring me, I'm the man for the job. I'm the ultimate coffee to code converting machine.
+      If you plan on hiring me, I'm the man for the job. I'm the ultimate ~~coffee~~ tea to code converting machine.
     -->
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="app"></div>
+</body>
+
 </html>
